--- a/style.css
+++ b/style.css
@@ -1,3 +1,42 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-image: url(cloud2.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+#navbar {
+    position: fixed;
+    width: 16%;
+    background-color: rgba(255, 219, 143, 0.712);
+    padding: 10px;
+    box-shadow: 5px 7px rgb(78, 70, 42);
+}
+#navbar ul {
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+#navbar li {
+    position: relative;
+    width: 100%;
+    list-style: none;
+}
+#navbar a {
+    display: block;
+    padding: 5px;
+    text-decoration: none;
+}
+#navbar a:hover {
+    color: aliceblue;
+}
+#introduction {
+    margin: auto;
+    max-width: 50%;
+    padding: 40px;
+    background-color: rgba(255, 219, 143, 0.712);
+    box-shadow: 5px 7px rgb(78, 70, 42);
+}
+#introduction h4 {
+    text-align: center;
+    
 }
